Added the Connect to Alpaca instructions

--- a/Notebooks/001 Connecting to Alpaca Tutorial.ipynb
+++ b/Notebooks/001 Connecting to Alpaca Tutorial.ipynb
@@ -37,10 +37,39 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Connect to Alpaca"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from alpaca_trade_api.rest import REST\n",
+    "\n",
+    "# Initialize Alpaca REST client\n",
+    "try:\n",
+    "    alpaca = REST(API_KEY, SECRET_KEY, base_url=ENDPOINT_URL)\n",
+    "    print(\"Connected to Alpaca successfully!\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Connection failed: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
