Added instructions on how to get a list of all stock tickers traded on Alpaca

--- a/Notebooks/001 Connecting to Alpaca Tutorial.ipynb
+++ b/Notebooks/001 Connecting to Alpaca Tutorial.ipynb
@@ -70,6 +70,27 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Get a list of all stock tickers traded on Alpaca"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assets = alpaca.list_assets(status=None)\n",
+    "tickers = [asset.symbol for asset in assets]\n",
+    "print(f\"Fetched {len(tickers)} tickers from Alpaca!\")\n",
+    "print(\"First 10 tickers:\", tickers[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
