Changed the list of stock to NYSE and NASDAQ traded stocks only.

--- a/Notebooks/001 Connecting to Alpaca Tutorial.ipynb
+++ b/Notebooks/001 Connecting to Alpaca Tutorial.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get a list of all stock tickers traded on Alpaca"
+    "## Get a list of all Alpaca stock tickers traded on the NYSE and NASDAQ"
    ]
   },
   {
@@ -80,10 +80,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get all assets and filter to stocks by exchange (~NASDAQ, NYSE)\n",
+    "\n",
     "assets = alpaca.list_assets(status=None)\n",
-    "tickers = [asset.symbol for asset in assets]\n",
-    "print(f\"Fetched {len(tickers)} tickers from Alpaca!\")\n",
-    "print(\"First 10 tickers:\", tickers[:10])"
+    "stock_assets = [asset for asset in assets if asset.exchange in ['NASDAQ', 'NYSE']]\n",
+    "stock_tickers = [asset.symbol for asset in stock_assets]\n",
+    "print(f\"Fetched {len(stock_tickers)} stock tickers from Alpaca (NASDAQ/NYSE)!\")\n",
+    "print(\"First 10 stock tickers:\", stock_tickers[:10])"
    ]
   },
   {
@@ -91,6 +94,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
