Added code into the 001 Notebook that tests the fetch time of only yesterday's data.

--- a/Notebooks/001 Connecting to Alpaca Tutorial.ipynb
+++ b/Notebooks/001 Connecting to Alpaca Tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Make sure you Alpaca credentials are being read properly and you are connecting to Alpaca"
+    "# Testing Data Fetch Time and Alpaca Connection. "
    ]
   },
   {
@@ -212,6 +212,77 @@
     "print(\"\\nExample Table Data:\\n\")\n",
     "print(\"Alpaca Sample:\", display(alpaca_df.head(30)))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing the Fetch Time for Yesterday's (OHLC) (One Day Only)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yesterday = (datetime.now() - timedelta(days=1)).strftime(\"%Y-%m-%d\")  # Date for yesterday's data\n",
+    "\n",
+    "start_time = time.time()  # Start timer for data fetching\n",
+    "daily_df = pd.DataFrame()  # Initialize DataFrame to store OHLC data\n",
+    "\n",
+    "# Loop through tickers to fetch OHLC data for yesterday\n",
+    "for ticker in tqdm(subset_tickers, desc=\"Fetching Yesterday's OHLC\"):\n",
+    "    try:\n",
+    "        bars = alpaca.get_bars(ticker, \"1Day\", yesterday, yesterday).df  # Fetch daily OHLC data for yesterday\n",
+    "        \n",
+    "        if not bars.empty:\n",
+    "            bars.reset_index(inplace=True)  # Reset DataFrame index for convenience\n",
+    "            ohlc = bars[['timestamp', 'open', 'high', 'low', 'close']]  # Extract relevant columns\n",
+    "            ohlc['ticker'] = ticker  # Add ticker symbol\n",
+    "            ohlc['date'] = ohlc['timestamp'].dt.strftime(\"%Y-%m-%d\")  # Format timestamp as date\n",
+    "            daily_df = pd.concat([daily_df, ohlc[['ticker', 'date', 'open', 'high', 'low', 'close']]])  # Append to main DataFrame\n",
+    "        else:\n",
+    "            print(f\"No data for {ticker}\")  # Log if no data available for ticker\n",
+    "\n",
+    "        time.sleep(1)  # Brief pause to avoid API rate limits\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error fetching {ticker}: {e}\")  # Log any exceptions during fetch\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "fetch_time = time.time() - start_time  # Calculate total fetching time\n",
+    "seconds_per_ticker = round((fetch_time / len(subset_tickers)), 2)  # Calculate average time per ticker\n",
+    "estimated_total_time = round(seconds_per_ticker * len(stock_tickers) / 60)  # Estimate total time for all tickers in minutes\n",
+    "\n",
+    "# Output summary of fetch results\n",
+    "print(f\"\\nFetched OHLC data for yesterday ({yesterday}) in {fetch_time:.2f} seconds.\")\n",
+    "print(f\"Average processing time per ticker: {seconds_per_ticker:.2f} seconds.\")\n",
+    "print(f\"Estimated total processing time for all stocks: {estimated_total_time} minutes.\")\n",
+    "print(\"\\nSample fetched data:\")\n",
+    "print(daily_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
