Tested time to get open prices in the morning only and Batch Testing that takes a set of tickers in a batch for the current day.

--- a/Notebooks/001 Connecting to Alpaca Tutorial.ipynb
+++ b/Notebooks/001 Connecting to Alpaca Tutorial.ipynb
@@ -124,17 +124,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Test the fetch time for Alpaca"
+    "## Configure Variables for the Tests"
    ]
   },
   {
@@ -144,20 +137,35 @@
    "outputs": [],
    "source": [
     "years_back = 5  # Number of years of historical data required\n",
+    "subset_size = 175  # Number of tickers to process in this run\n",
+    "subset_tickers = stock_tickers[:subset_size]  # Select the first 50 tickers\n",
     "start_date = \"2002-01-01\"  # Start date for data fetching\n",
+    "\n",
+    "# End date for data fetching\n",
     "end_date = (datetime.now() - timedelta(days=1)).strftime(\"%Y-%m-%d\")  # End date (yesterday)\n",
     "trading_days_back = years_back * 252  # Approximate number of trading days per year (252)\n",
-    "\n",
-    "print(f\"Fetching OHLC from {start_date} to {end_date} (~threshold: {trading_days_back} days)\")\n",
-    "\n",
+    "print(f\"Fetching OHLC from {start_date} to {end_date} (~threshold: {trading_days_back} days)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test the fetch time for Alpaca for all assets in the NASDAQ, NYSE, and AMEX"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Initialize dataframe and performance tracking variables\n",
     "alpaca_df = pd.DataFrame()\n",
     "start_time = time.time()\n",
     "missing_data_count = 0  # Counter for tickers with no data\n",
     "not_enough_time_count = 0  # Counter for tickers with insufficient data\n",
     "processed_ticker_count = 0  # Counter for processed tickers\n",
-    "subset_size = 175  # Number of tickers to process in this run\n",
-    "subset_tickers = stock_tickers[:subset_size]  # Select the first 50 tickers\n",
     "\n",
     "# Loop through each ticker to fetch historical stock data from Alpaca\n",
     "for ticker in tqdm(subset_tickers, desc=\"Alpaca Download Progress\"):\n",
@@ -233,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yesterday = (datetime.now() - timedelta(days=1)).strftime(\"%Y-%m-%d\")  # Date for yesterday's data\n",
+    "yesterday = (datetime.now() - timedelta(days=1)).strftime(\"%Y-%m-%d\") # RFC3339 format - date in the format required for Alpaca API\n",
     "\n",
     "start_time = time.time()  # Start timer for data fetching\n",
     "daily_df = pd.DataFrame()  # Initialize DataFrame to store OHLC data\n",
@@ -269,6 +277,144 @@
     "print(\"\\nSample fetched data:\")\n",
     "print(daily_df.head())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing the Fetch Time for the Open Prices ONLY in the Morning "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Today's date\n",
+    "today = datetime.now().strftime(\"%Y-%m-%d\") # RFC3339 format - date in the format required for Alpaca API\n",
+    "\n",
+    "# Market opens at 9:30 AM EST (or EDT, depending on daylight savings)\n",
+    "market_open = f\"{today}T09:30:00-05:00\"  \n",
+    "market_open_dt = pd.Timestamp(market_open)\n",
+    "\n",
+    "start_time = time.time()\n",
+    "open_prices_df = pd.DataFrame()\n",
+    "\n",
+    "# Loop to fetch today's opening prices for each ticker\n",
+    "for ticker in tqdm(subset_tickers, desc=\"Fetching Today's Open Prices\"):\n",
+    "    try:\n",
+    "        # Fetching the first minute bar (market open price)\n",
+    "        bars = alpaca.get_bars(\n",
+    "            ticker, \n",
+    "            \"1Min\", \n",
+    "            market_open_dt.isoformat(), \n",
+    "            (market_open_dt + timedelta(minutes=1)).isoformat()\n",
+    "        ).df\n",
+    "        \n",
+    "        if not bars.empty:\n",
+    "            bars.reset_index(inplace=True)\n",
+    "            open_price = bars.iloc[0]['open']\n",
+    "            \n",
+    "            # Append opening price data to DataFrame\n",
+    "            open_prices_df = pd.concat([\n",
+    "                open_prices_df, \n",
+    "                pd.DataFrame({\n",
+    "                    'ticker': [ticker],\n",
+    "                    'date': [today],\n",
+    "                    'open': [open_price]\n",
+    "                })\n",
+    "            ])\n",
+    "        # else:\n",
+    "        #     print(f\"No open data for {ticker}\")\n",
+    "\n",
+    "        time.sleep(1)  # Pause to avoid API rate limits\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error fetching {ticker}: {e}\")\n",
+    "        time.sleep(1)\n",
+    "\n",
+    "# Performance metrics\n",
+    "fetch_time = time.time() - start_time\n",
+    "seconds_per_ticker = round((fetch_time / len(subset_tickers)), 2)\n",
+    "estimated_total_time = round(seconds_per_ticker * len(stock_tickers) / 60)\n",
+    "\n",
+    "print(f\"\\nFetched today's open prices ({today}) in {fetch_time:.2f} seconds.\")\n",
+    "print(f\"Average processing time per ticker: {seconds_per_ticker:.2f} seconds.\")\n",
+    "print(f\"Estimated total processing time for all stocks: {estimated_total_time} minutes.\\n\")\n",
+    "\n",
+    "print(open_prices_df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Batch Fetching for One Day"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get today's date in the format required for Alpaca API\n",
+    "today = datetime.now().strftime(\"%Y-%m-%d\")\n",
+    "market_open_dt = pd.Timestamp(f\"{today}T09:30:00-05:00\").isoformat()\n",
+    "\n",
+    "# Fetch real-time opening prices for multiple tickers simultaneously\n",
+    "try:\n",
+    "    bars = alpaca.get_latest_bars(subset_tickers)  # Passes subset_tickers list directly\n",
+    "\n",
+    "    # Parse results into a DataFrame\n",
+    "    data = []\n",
+    "    for ticker, bar in bars.items():\n",
+    "        data.append({\n",
+    "            'ticker': ticker,\n",
+    "            'date': bar.t.strftime(\"%Y-%m-%d\"),\n",
+    "            'open': bar.o,\n",
+    "            'high': bar.h,\n",
+    "            'low': bar.l,\n",
+    "            'close': bar.c,\n",
+    "            'volume': bar.v\n",
+    "        })\n",
+    "\n",
+    "    real_time_df = pd.DataFrame(data)\n",
+    "    print(\"Real-Time Opening Prices (Market Open):\")\n",
+    "    print(real_time_df.head())\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Error fetching real-time data: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
