Updated the credentials imports.

--- a/Notebooks/001 Connecting to Alpaca Tutorial.ipynb
+++ b/Notebooks/001 Connecting to Alpaca Tutorial.ipynb
@@ -24,14 +24,14 @@
     "\n",
     "# Alpaca API\n",
     "from alpaca_trade_api.rest import REST\n",
-    "\n",
+    "import yf\n",
     "# Suppress warnings\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Project-specific imports\n",
     "sys.path.append(r\"d:\\dev\\stat_656_autotrader\")\n",
-    "from credentials import API_KEY, SECRET_KEY, ENDPOINT_URL "
+    "from credentials import ALPACA_API_KEY, ALPACA_SECRET_KEY, ALPAKA_ENDPOINT_URL"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "source": [
     "# Initialize Alpaca REST client\n",
     "try:\n",
-    "    alpaca = REST(API_KEY, SECRET_KEY, base_url=ENDPOINT_URL)\n",
+    "    alpaca = REST(ALPACA_API_KEY, ALPACA_SECRET_KEY, base_url=ALPAKA_ENDPOINT_URL)\n",
     "    print(\"Connected to Alpaca successfully!\")\n",
     "\n",
     "except Exception as e:\n",
@@ -407,6 +407,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
