--- a/Notebooks/test.ipynb
+++ b/Notebooks/test.ipynb
@@ -16,9 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'ensure_prices_table_exists' from 'src.etl.populate_prices' (d:\\dev\\stat_656_autotrader\\src\\etl\\populate_prices.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 11\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Import credentials and ETL functions\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcredentials\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ALPACA_API_KEY, ALPACA_SECRET_KEY, ALPAKA_ENDPOINT_URL\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01metl\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpopulate_tickers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ensure_database_exists, populate_tickers\n",
+      "File \u001b[1;32md:\\dev\\stat_656_autotrader\\src\\etl\\__init__.py:7\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# src/etl/__init__.py\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124;03mInitialization file for the ETL module of stat_656_autotrader.\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124;03mImports all functions from populate_prices.py, populate_tickers.py, and utils.py.\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpopulate_prices\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m      8\u001b[0m     ensure_prices_table_exists,\n\u001b[0;32m      9\u001b[0m     get_tickers_from_db,\n\u001b[0;32m     10\u001b[0m     populate_historical_prices,\n\u001b[0;32m     11\u001b[0m     update_latest_prices\n\u001b[0;32m     12\u001b[0m )\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpopulate_tickers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m     15\u001b[0m     ensure_database_exists,\n\u001b[0;32m     16\u001b[0m     populate_tickers\n\u001b[0;32m     17\u001b[0m )\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m     20\u001b[0m     connect_to_alpaca,\n\u001b[0;32m     21\u001b[0m     fetch_alpaca_stock_tickers,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     25\u001b[0m     fetch_alpaca_latest_bars\n\u001b[0;32m     26\u001b[0m )\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'ensure_prices_table_exists' from 'src.etl.populate_prices' (d:\\dev\\stat_656_autotrader\\src\\etl\\populate_prices.py)"
+     ]
+    }
+   ],
    "source": [
     "# Import necessary libraries\n",
     "import sys\n",
@@ -30,11 +43,12 @@
     "\n",
     "# Import credentials and ETL functions\n",
     "from credentials import ALPACA_API_KEY, ALPACA_SECRET_KEY, ALPAKA_ENDPOINT_URL\n",
-    "from src.etl import (\n",
-    "    ensure_database_exists, populate_tickers, ensure_prices_table_exists,\n",
-    "    get_tickers_from_db, populate_historical_prices, update_latest_prices,\n",
-    "    connect_to_alpaca\n",
-    ")"
+    "from src.etl.populate_tickers import ensure_database_exists, populate_tickers\n",
+    "# from src.etl import (\n",
+    "#     ensure_database_exists, populate_tickers, ensure_prices_table_exists,\n",
+    "#     get_tickers_from_db, populate_historical_prices, update_latest_prices,\n",
+    "#     connect_to_alpaca\n",
+    "# )"
    ]
   },
   {
@@ -102,9 +116,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "autotrader",
+   "display_name": "aaron_dev",
    "language": "python",
-   "name": "autotrader"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -116,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
