Updated base and database pathways to the config file.

--- a/Notebooks/001 Tutorial - Connecting and Testing Alpaca Connections.ipynb
+++ b/Notebooks/001 Tutorial - Connecting and Testing Alpaca Connections.ipynb
@@ -5,7 +5,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# /Notebooks/001-Tutorial-Connecting-to-Data-Source.ipynb"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -34,16 +36,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'populate_historical_prices' from 'src.etl.populate_prices' (d:\\dev\\stat_656_autotrader\\src\\etl\\populate_prices.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124md:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mdev\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mstat_656_autotrader\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# Project-specific imports\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_alpaca_client, fetch_alpaca_stock_tickers, fetch_alpaca_historical_data, fetch_alpaca_latest_bars\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mcredentials\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ALPACA_API_KEY, ALPACA_SECRET_KEY, ALPAKA_ENDPOINT_URL\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# Initialize Alpaca client\u001b[39;00m\n",
-      "File \u001b[1;32md:\\dev\\stat_656_autotrader\\src\\__init__.py:13\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# src/__init__.py\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m      4\u001b[0m     get_alpaca_client,\n\u001b[0;32m      5\u001b[0m     fetch_alpaca_stock_tickers,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     10\u001b[0m     get_latest_price_date,\n\u001b[0;32m     11\u001b[0m )\n\u001b[1;32m---> 13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01metl\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m (\n\u001b[0;32m     14\u001b[0m     populate_prices, \n\u001b[0;32m     15\u001b[0m     populate_tickers,\n\u001b[0;32m     16\u001b[0m     update_prices, \n\u001b[0;32m     17\u001b[0m )\n\u001b[0;32m     19\u001b[0m __all__ \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m     20\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mget_alpaca_client\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfetch_alpaca_stock_tickers\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     31\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mget_tickers_from_db\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     32\u001b[0m ]\n",
-      "File \u001b[1;32md:\\dev\\stat_656_autotrader\\src\\etl\\__init__.py:3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# src/etl/__init__.py\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpopulate_prices\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m populate_historical_prices, update_latest_prices\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpopulate_tickers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m populate_tickers\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mupdate_prices\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m update_daily_prices\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'populate_historical_prices' from 'src.etl.populate_prices' (d:\\dev\\stat_656_autotrader\\src\\etl\\populate_prices.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Project root added to sys.path: D:\\dev\\stat_656_autotrader\n"
      ]
     }
    ],
@@ -59,8 +55,12 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
+    "# Import paths from the config module\n",
+    "from config import BASE_DIR\n",
+    "\n",
     "# Adjust the path to your project root if needed\n",
-    "sys.path.append(r\"d:\\dev\\stat_656_autotrader\")\n",
+    "sys.path.append(str(BASE_DIR))\n",
+    "print(f\"Project root added to sys.path: {BASE_DIR}\")\n",
     "\n",
     "# Project-specific imports\n",
     "from src.utils import get_alpaca_client, fetch_alpaca_stock_tickers, fetch_alpaca_historical_data, fetch_alpaca_latest_bars\n",
@@ -79,9 +79,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total tickers fetched: 7460\n",
+      "First 20 tickers: ['PHI', 'GATX', 'PEY', 'REFR', 'HIHO', 'TY', 'TKR', 'VUZI', 'OFIX', 'NOMD', 'MPTI', 'ANTX', 'CASH', 'SEB', 'RMD', 'BEAT', 'PTY', 'CFBK', 'DYAI', 'GRC']\n"
+     ]
+    }
+   ],
    "source": [
     "# Fetch Alpaca tickers using existing utility\n",
     "stock_tickers = fetch_alpaca_stock_tickers(alpaca)\n",
@@ -99,9 +108,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fetching OHLC data from 2002-01-01 to 2025-03-29 (approx. 1260 trading days)\n"
+     ]
+    }
+   ],
    "source": [
     "years_back = 5\n",
     "subset_size = 175\n",
@@ -123,9 +140,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Alpaca Download Progress: 100%|██████████| 175/175 [02:49<00:00,  1.03it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Fetched 276535 rows of stock data in 169.14 seconds.\n",
+      "Processed 175 tickers, missing 48 tickers, 48 tickers did not have enough time.\n",
+      "Processing time per ticker: 0.97 seconds.\n",
+      "\n",
+      "Fetched 276535 rows of historical OHLC data.\n",
+      "  ticker        date   open   high    low  close\n",
+      "0    PHI  2016-09-02  39.15  39.90  38.86  39.46\n",
+      "1    PHI  2016-09-06  39.48  39.48  38.35  38.62\n",
+      "2    PHI  2016-09-07  38.71  39.41  38.31  39.10\n",
+      "3    PHI  2016-09-08  39.49  39.85  39.32  39.81\n",
+      "4    PHI  2016-09-09  39.54  39.57  37.50  37.81\n",
+      "5    PHI  2016-09-12  37.53  37.90  37.38  37.56\n",
+      "6    PHI  2016-09-13  37.43  37.43  36.44  36.59\n",
+      "7    PHI  2016-09-14  36.73  37.66  36.73  36.86\n",
+      "8    PHI  2016-09-15  36.72  36.72  35.92  36.19\n",
+      "9    PHI  2016-09-16  35.82  35.82  34.86  35.05\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Use existing fetch utility for historical OHLC\n",
     "historical_df = fetch_alpaca_historical_data(alpaca, subset_tickers, start_date, end_date, years_back)\n",
@@ -143,9 +198,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Alpaca Download Progress: 100%|██████████| 175/175 [03:20<00:00,  1.15s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Fetched 0 rows of stock data in 200.77 seconds.\n",
+      "Processed 175 tickers, missing 175 tickers, 0 tickers did not have enough time.\n",
+      "Processing time per ticker: 1.15 seconds.\n",
+      "\n",
+      "Fetched OHLC data for yesterday (2025-03-29):\n",
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "yesterday = (datetime.now() - timedelta(days=1)).strftime(\"%Y-%m-%d\")\n",
     "\n",
@@ -164,9 +249,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching Today's Open Prices: 100%|██████████| 175/175 [01:03<00:00,  2.75it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Today's Open Prices (2025-03-30):\n",
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "today = datetime.now().strftime(\"%Y-%m-%d\")\n",
     "market_open_dt = pd.Timestamp(f\"{today}T09:30:00-05:00\")\n",
@@ -200,9 +311,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Real-Time Latest Bars (Market Open):\n",
+      "  ticker        date     open     high      low    close  volume\n",
+      "0  AFRIW  2025-03-20    0.620    0.620    0.620    0.620    1300\n",
+      "1   AGMI  2025-02-25   27.550   27.550   27.550   27.550     100\n",
+      "2   AOMR  2025-03-28    9.560    9.560    9.560    9.560     100\n",
+      "3   ACGL  2025-03-28   95.050   95.070   95.020   95.040    2933\n",
+      "4   ACTG  2025-03-28    3.310    3.310    3.310    3.310     819\n",
+      "5    AER  2025-03-28  102.110  102.120  102.110  102.120    1549\n",
+      "6   ACIW  2025-03-28   54.250   54.250   54.250   54.250     248\n",
+      "7   GATX  2025-03-28  155.335  155.335  155.335  155.335     109\n",
+      "8    ADN  2025-03-26    4.960    4.960    4.960    4.960     100\n",
+      "9    AGD  2025-03-28    9.955    9.955    9.955    9.955     502\n"
+     ]
+    }
+   ],
    "source": [
     "real_time_df = fetch_alpaca_latest_bars(alpaca, subset_tickers)\n",
     "\n",
@@ -219,9 +350,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processed 10 tickers in 0.05 seconds.\n",
+      "Average time per ticker: 0.01 sec.\n",
+      "Estimated time for all tickers: 0.64 mins.\n"
+     ]
+    }
+   ],
    "source": [
     "# Simple diagnostics\n",
     "def performance_summary(start_time, num_tickers):\n",
