--- a/Notebooks/002 Tutorial  - Set Up Databases and Populating Tickers and Historical Stock Data.ipynb
+++ b/Notebooks/002 Tutorial  - Set Up Databases and Populating Tickers and Historical Stock Data.ipynb
@@ -23,15 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
+    "import sqlite3\n",
     "from pathlib import Path\n",
     "from datetime import datetime, timedelta\n",
     "\n",
-    "sys.path.append(r\"d:\\dev\\stat_656_autotrader\")\n",
+    "# Import paths from the config module\n",
+    "from config import BASE_DIR, DB_DIR\n",
+    "\n",
+    "# Adjust the path to your project root if needed\n",
+    "sys.path.append(str(BASE_DIR))\n",
+    "print(f\"Project root added to sys.path: {BASE_DIR}\")\n",
     "\n",
     "from src.db_schema import DATABASES\n",
     "from src.etl.populate_tickers import recreate_database, populate_tickers\n",
@@ -55,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -72,10 +78,6 @@
     }
    ],
    "source": [
-    "import sqlite3\n",
-    "\n",
-    "BASE_DIR = Path(r\"d:\\dev\\stat_656_autotrader\")\n",
-    "DB_DIR = BASE_DIR / 'databases'\n",
     "DB_DIR.mkdir(exist_ok=True)\n",
     "\n",
     "def setup_databases():\n",
@@ -535,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +553,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Alpaca Download Progress:   0%|          | 11/7462 [00:13<2:37:29,  1.27s/it]"
+      "Alpaca Download Progress: 100%|██████████| 7462/7462 [1:54:25<00:00,  1.09it/s]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Fetched 10055017 rows of stock data in 6865.55 seconds.\n",
+      "Processed 7462 tickers, missing 2856 tickers, 2852 tickers did not have enough time.\n",
+      "Processing time per ticker: 0.92 seconds.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Inserting Prices into DB: 100%|██████████| 10055017/10055017 [14:56<00:00, 11216.68it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Historical stock prices populated successfully.\n"
      ]
     }
    ],
@@ -564,9 +590,389 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "📊 Fetching and displaying historical stock prices...\n",
+      "Connecting to database: D:\\dev\\stat_656_autotrader\\databases\\assets.db\n",
+      "DataFrame shape: (10055017, 11)\n",
+      "Columns: ['price_id', 'asset_id', 'symbol', 'date', 'open', 'high', 'low', 'close', 'adjusted_close', 'volume', 'fetched_at']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price_id</th>\n",
+       "      <th>asset_id</th>\n",
+       "      <th>symbol</th>\n",
+       "      <th>date</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>adjusted_close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>fetched_at</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1988</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ZUMZ</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>14.80</td>\n",
+       "      <td>15.4400</td>\n",
+       "      <td>14.1941</td>\n",
+       "      <td>15.1600</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4311</td>\n",
+       "      <td>4</td>\n",
+       "      <td>EMR</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>47.32</td>\n",
+       "      <td>47.3400</td>\n",
+       "      <td>46.5200</td>\n",
+       "      <td>47.3000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6634</td>\n",
+       "      <td>5</td>\n",
+       "      <td>CCL</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>54.15</td>\n",
+       "      <td>54.2200</td>\n",
+       "      <td>53.2200</td>\n",
+       "      <td>54.2000</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8957</td>\n",
+       "      <td>6</td>\n",
+       "      <td>CCK</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>49.78</td>\n",
+       "      <td>49.8200</td>\n",
+       "      <td>48.8000</td>\n",
+       "      <td>49.7600</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11280</td>\n",
+       "      <td>7</td>\n",
+       "      <td>CCJ</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>12.1010</td>\n",
+       "      <td>11.7061</td>\n",
+       "      <td>12.0500</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>15748</td>\n",
+       "      <td>9</td>\n",
+       "      <td>ALDX</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>6.59</td>\n",
+       "      <td>6.7800</td>\n",
+       "      <td>6.4600</td>\n",
+       "      <td>6.6800</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>18071</td>\n",
+       "      <td>10</td>\n",
+       "      <td>CCI</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>85.63</td>\n",
+       "      <td>85.9300</td>\n",
+       "      <td>84.8300</td>\n",
+       "      <td>85.3900</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>20394</td>\n",
+       "      <td>11</td>\n",
+       "      <td>EMO</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>12.31</td>\n",
+       "      <td>12.9500</td>\n",
+       "      <td>12.3100</td>\n",
+       "      <td>12.8700</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>24520</td>\n",
+       "      <td>15</td>\n",
+       "      <td>EMN</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>66.50</td>\n",
+       "      <td>66.6600</td>\n",
+       "      <td>65.1200</td>\n",
+       "      <td>66.6300</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>26843</td>\n",
+       "      <td>16</td>\n",
+       "      <td>EML</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>18.75</td>\n",
+       "      <td>19.0390</td>\n",
+       "      <td>18.4750</td>\n",
+       "      <td>18.9795</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>29166</td>\n",
+       "      <td>17</td>\n",
+       "      <td>BHR</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>14.37</td>\n",
+       "      <td>14.5000</td>\n",
+       "      <td>14.1900</td>\n",
+       "      <td>14.3200</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>31489</td>\n",
+       "      <td>18</td>\n",
+       "      <td>AMRC</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>6.07</td>\n",
+       "      <td>6.1600</td>\n",
+       "      <td>5.8300</td>\n",
+       "      <td>6.0100</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>33812</td>\n",
+       "      <td>21</td>\n",
+       "      <td>CCBG</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>15.32</td>\n",
+       "      <td>15.3200</td>\n",
+       "      <td>14.4800</td>\n",
+       "      <td>15.0200</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>39115</td>\n",
+       "      <td>24</td>\n",
+       "      <td>BHP</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>25.07</td>\n",
+       "      <td>25.5000</td>\n",
+       "      <td>24.7500</td>\n",
+       "      <td>25.4800</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>41438</td>\n",
+       "      <td>25</td>\n",
+       "      <td>EME</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>47.28</td>\n",
+       "      <td>47.5700</td>\n",
+       "      <td>46.0600</td>\n",
+       "      <td>46.2500</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>45670</td>\n",
+       "      <td>28</td>\n",
+       "      <td>EMD</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>13.67</td>\n",
+       "      <td>13.8300</td>\n",
+       "      <td>13.5300</td>\n",
+       "      <td>13.8200</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>47993</td>\n",
+       "      <td>29</td>\n",
+       "      <td>CC</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>5.20</td>\n",
+       "      <td>5.4900</td>\n",
+       "      <td>5.2000</td>\n",
+       "      <td>5.4800</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>50316</td>\n",
+       "      <td>30</td>\n",
+       "      <td>BHLB</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>28.68</td>\n",
+       "      <td>28.9300</td>\n",
+       "      <td>28.1700</td>\n",
+       "      <td>28.4300</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>52639</td>\n",
+       "      <td>32</td>\n",
+       "      <td>CBZ</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>9.75</td>\n",
+       "      <td>9.7883</td>\n",
+       "      <td>9.6300</td>\n",
+       "      <td>9.7300</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>56474</td>\n",
+       "      <td>35</td>\n",
+       "      <td>CBU</td>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>39.10</td>\n",
+       "      <td>39.3000</td>\n",
+       "      <td>38.3800</td>\n",
+       "      <td>38.6400</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2025-03-31 03:21:15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    price_id  asset_id symbol        date   open     high      low    close  \\\n",
+       "0       1988         3   ZUMZ  2016-01-04  14.80  15.4400  14.1941  15.1600   \n",
+       "1       4311         4    EMR  2016-01-04  47.32  47.3400  46.5200  47.3000   \n",
+       "2       6634         5    CCL  2016-01-04  54.15  54.2200  53.2200  54.2000   \n",
+       "3       8957         6    CCK  2016-01-04  49.78  49.8200  48.8000  49.7600   \n",
+       "4      11280         7    CCJ  2016-01-04  11.95  12.1010  11.7061  12.0500   \n",
+       "5      15748         9   ALDX  2016-01-04   6.59   6.7800   6.4600   6.6800   \n",
+       "6      18071        10    CCI  2016-01-04  85.63  85.9300  84.8300  85.3900   \n",
+       "7      20394        11    EMO  2016-01-04  12.31  12.9500  12.3100  12.8700   \n",
+       "8      24520        15    EMN  2016-01-04  66.50  66.6600  65.1200  66.6300   \n",
+       "9      26843        16    EML  2016-01-04  18.75  19.0390  18.4750  18.9795   \n",
+       "10     29166        17    BHR  2016-01-04  14.37  14.5000  14.1900  14.3200   \n",
+       "11     31489        18   AMRC  2016-01-04   6.07   6.1600   5.8300   6.0100   \n",
+       "12     33812        21   CCBG  2016-01-04  15.32  15.3200  14.4800  15.0200   \n",
+       "13     39115        24    BHP  2016-01-04  25.07  25.5000  24.7500  25.4800   \n",
+       "14     41438        25    EME  2016-01-04  47.28  47.5700  46.0600  46.2500   \n",
+       "15     45670        28    EMD  2016-01-04  13.67  13.8300  13.5300  13.8200   \n",
+       "16     47993        29     CC  2016-01-04   5.20   5.4900   5.2000   5.4800   \n",
+       "17     50316        30   BHLB  2016-01-04  28.68  28.9300  28.1700  28.4300   \n",
+       "18     52639        32    CBZ  2016-01-04   9.75   9.7883   9.6300   9.7300   \n",
+       "19     56474        35    CBU  2016-01-04  39.10  39.3000  38.3800  38.6400   \n",
+       "\n",
+       "   adjusted_close volume           fetched_at  \n",
+       "0            None   None  2025-03-31 03:21:10  \n",
+       "1            None   None  2025-03-31 03:21:10  \n",
+       "2            None   None  2025-03-31 03:21:10  \n",
+       "3            None   None  2025-03-31 03:21:10  \n",
+       "4            None   None  2025-03-31 03:21:11  \n",
+       "5            None   None  2025-03-31 03:21:11  \n",
+       "6            None   None  2025-03-31 03:21:11  \n",
+       "7            None   None  2025-03-31 03:21:11  \n",
+       "8            None   None  2025-03-31 03:21:12  \n",
+       "9            None   None  2025-03-31 03:21:12  \n",
+       "10           None   None  2025-03-31 03:21:12  \n",
+       "11           None   None  2025-03-31 03:21:12  \n",
+       "12           None   None  2025-03-31 03:21:13  \n",
+       "13           None   None  2025-03-31 03:21:13  \n",
+       "14           None   None  2025-03-31 03:21:13  \n",
+       "15           None   None  2025-03-31 03:21:14  \n",
+       "16           None   None  2025-03-31 03:21:14  \n",
+       "17           None   None  2025-03-31 03:21:14  \n",
+       "18           None   None  2025-03-31 03:21:14  \n",
+       "19           None   None  2025-03-31 03:21:15  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Fetch and display the historical prices\n",
     "print(\"\\n📊 Fetching and displaying historical stock prices...\")\n",
