Adjusted notebook comments and added a import sys to the 001 notebook tutorial.

--- a/Notebooks/002 Tutorial  - Set Up Databases and Populating Tickers and Historical Stock Data.ipynb
+++ b/Notebooks/002 Tutorial  - Set Up Databases and Populating Tickers and Historical Stock Data.ipynb
@@ -35,7 +35,7 @@
     "# Import paths from the config module\n",
     "from config import BASE_DIR, DB_DIR\n",
     "\n",
-    "# Adjust the path to your project root if needed\n",
+    "# Adjust the path to the project root directory\n",
     "sys.path.append(str(BASE_DIR))\n",
     "print(f\"Project root added to sys.path: {BASE_DIR}\")\n",
     "\n",
