--- a/Notebooks/001 Tutorial - Connecting and Testing Alpaca Connections.ipynb
+++ b/Notebooks/001 Tutorial - Connecting and Testing Alpaca Connections.ipynb
@@ -58,7 +58,7 @@
     "# Import paths from the config module\n",
     "from config import BASE_DIR\n",
     "\n",
-    "# Adjust the path to your project root if needed\n",
+    "# Adjust the path to the project root directory\n",
     "sys.path.append(str(BASE_DIR))\n",
     "print(f\"Project root added to sys.path: {BASE_DIR}\")\n",
     "\n",
