Updated the src/__init__.py file to fix import issues, and updated import statements to allow the paths to the config file to be seen by the various tutorials in the Jupyter Notebooks.

--- a/Notebooks/001 Tutorial - Connecting and Testing Alpaca Connections.ipynb
+++ b/Notebooks/001 Tutorial - Connecting and Testing Alpaca Connections.ipynb
@@ -36,10 +36,14 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Project root added to sys.path: D:\\dev\\stat_656_autotrader\n"
+     "ename": "NameError",
+     "evalue": "name '__file__' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m     11\u001b[39m warnings.filterwarnings(\u001b[33m\"\u001b[39m\u001b[33mignore\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m# Define BASE_DIR and adjust sys.path before importing\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m BASE_DIR = Path(\u001b[34;43m__file__\u001b[39;49m).resolve().parent.parent  \u001b[38;5;66;03m# Points to stat_656_autotrader/ from Notebooks/\u001b[39;00m\n\u001b[32m     15\u001b[39m sys.path.append(\u001b[38;5;28mstr\u001b[39m(BASE_DIR))\n\u001b[32m     16\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mProject root added to sys.path: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mBASE_DIR\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name '__file__' is not defined"
      ]
     }
    ],
@@ -48,6 +52,8 @@
     "from datetime import datetime, timedelta\n",
     "import time\n",
     "import sys\n",
+    "from pathlib import Path\n",
+    "import os\n",
     "\n",
     "# Non-standard libraries\n",
     "import pandas as pd\n",
@@ -55,12 +61,13 @@
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
-    "# Import paths from the config module\n",
-    "from config import BASE_DIR\n",
-    "\n",
-    "# Adjust the path to the project root directory\n",
+    "# Define BASE_DIR and adjust sys.path before importing\n",
+    "BASE_DIR = Path(os.getcwd()).parent  # Points to stat_656_autotrader/ from Notebooks/\n",
     "sys.path.append(str(BASE_DIR))\n",
     "print(f\"Project root added to sys.path: {BASE_DIR}\")\n",
+    "\n",
+    "# Import paths from the config module (now in src/)\n",
+    "from src.config import BASE_DIR as CONFIG_BASE_DIR\n",
     "\n",
     "# Project-specific imports\n",
     "from src.utils import get_alpaca_client, fetch_alpaca_stock_tickers, fetch_alpaca_historical_data, fetch_alpaca_latest_bars\n",
@@ -398,7 +405,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "aaron_dev",
+   "display_name": "autotrader",
    "language": "python",
    "name": "python3"
   },
@@ -412,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
