--- a/Notebooks/002 Tutorial  - Set Up Databases and Populating Tickers and Historical Stock Data.ipynb
+++ b/Notebooks/002 Tutorial  - Set Up Databases and Populating Tickers and Historical Stock Data.ipynb
@@ -25,17 +25,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'src'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 7\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdatetime\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m datetime, timedelta\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Import paths from the config module\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconfig\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BASE_DIR, DB_DIR\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# Define BASE_DIR and adjust sys.path before importing\u001b[39;00m\n\u001b[0;32m     10\u001b[0m BASE_DIR \u001b[38;5;241m=\u001b[39m Path(os\u001b[38;5;241m.\u001b[39mgetcwd())\u001b[38;5;241m.\u001b[39mparent  \u001b[38;5;66;03m# Points to stat_656_autotrader/ from Notebooks/\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'src'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
+    "import os\n",
     "import sqlite3\n",
     "from pathlib import Path\n",
     "from datetime import datetime, timedelta\n",
     "\n",
     "# Import paths from the config module\n",
-    "from config import BASE_DIR, DB_DIR\n",
+    "from src.config import BASE_DIR, DB_DIR\n",
     "\n",
-    "# Adjust the path to the project root directory\n",
+    "# Define BASE_DIR and adjust sys.path before importing\n",
+    "BASE_DIR = Path(os.getcwd()).parent  # Points to stat_656_autotrader/ from Notebooks/\n",
     "sys.path.append(str(BASE_DIR))\n",
     "print(f\"Project root added to sys.path: {BASE_DIR}\")\n",
     "\n",
@@ -1022,7 +1036,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
