--- a/Notebooks/003 Tutorial - Update Recent Stock Prices and Visualize.ipynb
+++ b/Notebooks/003 Tutorial - Update Recent Stock Prices and Visualize.ipynb
@@ -25,13 +25,13 @@
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'src'",
+     "evalue": "No module named 'config'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mstatsmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapi\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msm\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01malpaca_utils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m update_stock_prices, get_alpaca_client, fetch_alpaca_latest_bars\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdb_utils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_db_connection, fetch_active_tickers\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvisualizations\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstock_price_trends\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m plot_stock_trends  \u001b[38;5;66;03m# We’ll update this\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'src'"
+      "Cell \u001b[1;32mIn[3], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;66;03m# Import paths from the config module\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mconfig\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BASE_DIR, DB_DIR\n\u001b[0;32m     13\u001b[0m \u001b[38;5;66;03m# Adjust the path to the project root directory\u001b[39;00m\n\u001b[0;32m     14\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;28mstr\u001b[39m(BASE_DIR))\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'config'"
      ]
     }
    ],
@@ -44,13 +44,16 @@
     "import numpy as np\n",
     "import statsmodels.api as sm\n",
     "import sys\n",
+    "from pathlib import Path\n",
+    "import os\n",
     "\n",
-    "# Import paths from the config module\n",
-    "from config import BASE_DIR, DB_DIR\n",
-    "\n",
-    "# Adjust the path to the project root directory\n",
+    "# Define BASE_DIR and adjust sys.path before importing\n",
+    "BASE_DIR = Path(os.getcwd()).parent  # Points to stat_656_autotrader/ from Notebooks/\n",
     "sys.path.append(str(BASE_DIR))\n",
     "print(f\"Project root added to sys.path: {BASE_DIR}\")\n",
+    "\n",
+    "# Import paths from the config module\n",
+    "from src.config import BASE_DIR, DB_DIR\n",
     "\n",
     "from src.utils.alpaca_utils import update_stock_prices, get_alpaca_client, fetch_alpaca_latest_bars\n",
     "from src.utils.db_utils import get_db_connection, fetch_active_tickers\n",
